added the main part of the assignment

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                 <p>Our Awesome Portfolio</p>
             </div>
             <div class="portfolio-description">
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
-                    sodales risus ut pellentesque vel euismod. </p>
+                <p>Visit all the amazing things and experience a whole new world and dive in... </p>
             </div>
             <div class="image">
                 <div class="image-group">
