almost finished assignment

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
             <div class="sale-offer">
                 <h6 class="best-offer">NEW BEST OFFER</h6>
                 <h2 class="comingsoon">Coming Soon</h2>
-                <p class="offer-text">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
-                    malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p class="offer-text">We are offering all Doe customers a chance to save up to 45% on computer software
+                    this Saturday, March 15, from 8:00 a.m. to 9:00 p.m., at our Main Street store. Receive discounts on
+                    all the latest software packages by bringing canned food for the homeless. The more food you bring,
+                    the more you save. Plan to be there! </p>
             </div>
             <div class="round-image">
 
@@ -47,8 +49,8 @@
             </div>
             <div class="text">
                 <h2 class="greet-msg">2024</h2>
-                <p class="msg">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
-<img src="resources/Group 96.png" alt="" class="happy-new-year">
+                <p class="msg">Let’s celebrate the 2024 New Year with open arms and a warm welcome.</p>
+                <img src="resources/Group 96.png" alt="" class="happy-new-year">
             </div>
 
         </section>
