almost finished assignment

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year New Mission</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="nstyle.css">
 
 </head>
 
@@ -117,26 +116,24 @@
 
     </main>
     <footer class="footer-sect">
-        <!-- <div class="footer-sect"> -->
         <div class="foot-text">
             <div>
                 <p class="address">44, Big Building Roosevelt Street
                     Beach Gardens Florida 33410</p>
             </div>
+                    <div class="contacts">
 
+            <img class="image-icon" src="resources/Call.png" alt="">
+            <p id="number">+00 123 584 124</p>
 
-            <div class="contact-details">
-
-                <div class="contacts">
-
-                    <img class="image-icon" src="resources/Call.png" alt="">
-                    <p id="number">+00 123 584 124</p>
+        </div> 
+               
 
                 </div>
-
-
+            
             </div>
         </div>
+
 
 
 
